name:          hprox
version:       0.1.0
synopsis:      a lightweight HTTP proxy server, and more
description:
  Please see the README on GitHub at <https://github.com/bjin/hprox#readme>

license:       Apache-2.0
license-file:  LICENSE
author:        Bin Jin
maintainer:    bjin@ctrl-d.org
category:      Web
build-type:    Simple
cabal-version: >=1.10

extra-source-files:
  README.md

flag static
  description:
    Enable static build
  Default:
    False

executable hprox
  hs-source-dirs:
    src
  main-is:
    Main.hs
  ghc-options:
    -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N -c"
  if flag(static)
    ghc-options:
      -optl-static
  other-modules:
    HProx
  build-depends:
    async,
    base < 5.0,
    base64-bytestring,
    binary,
    bytestring,
    case-insensitive,
    conduit,
    conduit-extra,
    http-client,
    http-reverse-proxy >= 0.4.0,
    http-types,
    optparse-applicative,
    tls >= 1.5.0,
    unix,
    wai >= 3.2.2,
    wai-extra,
    warp >= 3.2.8,
    warp-tls >= 3.2.5
  default-language:
    Haskell2010
